# prostate-mri-classification

./: .gitignore  README.md  criterion.py  engine.py  optimizer.py  pyproject.toml  train.py  utils.py
config/: resnet18.yaml  resnet50.yaml  seresnext50.yaml  vit.yaml
config/seresnext/: seresnext101_dec_lr_inc_epochs_dropout_0.5_with_aug_monai.yaml  seresnext_dec_lr_inc_epochs.yaml  seresnext_dec_lr_inc_epochs_dropout_0.5.yaml  seresnext_dec_lr_inc_epochs_dropout_0.5_with_aug.yaml  seresnext_dec_lr_inc_epochs_dropout_0.5_with_aug_monai.yaml  seresnext_dec_lr_inc_epochs_dropout_0.5_with_aug_monai_inc_bs.yaml
loader/: data.py  preprocessing.py
model/: __init__.py
model/resnet/: resnet18.py  resnet50.py  seresnext101.py  seresnext50.py
model/vit/: vit.py
notebooks/: scratch.ipynb
